--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,8 @@ logging:
   level:
     root: INFO
     org.springframework.web: INFO
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: TRACE
-#    org.springframework.boot.autoconfigure: DEBUG
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: DEBUG
 
 spring:
   security:
