Extend README.md and add postman collections

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ logging:
     root: INFO
     org.springframework.web: INFO
     org.springframework.security: trace
+    org.springframework.security.jackson2: INFO
 
 spring:
   security:
