--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,11 +23,11 @@ jobs:
     strategy:
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
-        java: [ 11, 17 ]
+        java: [ 17 ]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11 and 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: ${{ matrix.java }}
